[project]
name = "researchagent"
version = "0.1.0"
description = ""
authors = [
    {name = "Aamirshazad",email = "amiralicomsats3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "langgraph (>=0.2.73,<0.3.0)",
    "langgraph-supervisor (>=0.0.2,<0.0.3)",
    "langchain-google-genai (>=2.0.9,<3.0.0)",
    "langchain-core (>=0.3.35,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "arxiv (>=2.1.3,<3.0.0)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "langchain-unstructured (>=0.1.6,<0.2.0)",
    "langchain-docling (>=0.2.0,<0.3.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langmem (>=0.0.10,<0.0.11)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
